Product Listing Page (PLP)/src/components/ProductPage/components/Sort/Sort.module.scss
.sort__option__container {
    border: 1px solid black;
    padding: .1rem 1rem;
    text-align: center;
    display: flex;
    align-items: center;
    justify-content: space-between;
    height: 2rem;

    &:hover {
        cursor: pointer;
    }
}

.sort__dropdown__wrapper {
    position: absolute;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    // padding: 0 .3rem;
    background-color: rgb(255, 255, 255);
    width: 100%;
    height: 0;
    // overflow-y: scroll;
    opacity: 0;
    visibility: hidden;
    transition: opacity .2s, visibility .3s, height .2s;
}

.dropdown__option {
    margin: 0;
    font-size: .8rem;
    padding: .5rem .5rem;
    cursor: pointer;
}

.open {
    position: absolute;
    opacity: 1;
    height: 150px;
    visibility: visible;
    transition: opacity .2s, visibility .3s, height .2s;
}

.down__arrow {
    border-bottom: 10px solid black;
    border-right: 10px solid transparent;
    border-left: 10px solid transparent;
}

.up__arrow {
    border-top: 10px solid black;
    border-right: 10px solid transparent;
    border-left: 10px solid transparent;
}

.dropdown__option {
    &:hover {
        background-color: rgb(231, 231, 231);
    }

    &__selected {
        background-color: rgb(219, 211, 211);
    }
}

